--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,7 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
+    namespace 'org.leanflutter.plugins.flutter_txugcupload'
     compileSdkVersion 31
 
     compileOptions {
